--- a/stylesheets/layout.css
+++ b/stylesheets/layout.css
@@ -2,6 +2,9 @@ body { -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; 
 }
 a { color: inherit;
 }
+* {
+  box-sizing: border-box;
+}
 .menubar {
   display: flex;
   justify-content: space-between;
@@ -17,6 +20,6 @@ a { color: inherit;
   color: #aaa;
 }
 .menubar img {
-  height: 100%;
+  height: 80%;
   width: auto;
 }
