--- a/stylesheets/layout.css
+++ b/stylesheets/layout.css
@@ -11,8 +11,9 @@ a { color: inherit;
   align-items: center;
   height: 40px;
   padding: 0 20px;
-  border-bottom: 1px solid #aaa;
-  box-shadow: 0 4px 12px 2px rgba(0, 0, 0, 0.5);
+  /* border-bottom: 1px solid #aaa; */
+  box-shadow: 0 4px 12px 2px rgba(0, 0, 0, 0.1);
+  background: white;
 }
 .menubar a {
   height: 20px;
